--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,212 @@
+/* Start Global Rules */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
 
+html {
+    scroll-behavior: smooth;
+}
+
+:root {
+    --blueColor: hsl(223, 87%, 63%);
+    --paleBlue: hsl(223, 100%, 88%);
+    --lightRed: hsl(354, 100%, 66%);
+    --grayColor: hsl(0, 0%, 59%);
+    --veryDarkBlue: hsl(209, 33%, 12%);
+    --whiteColor: #ffffff;
+    --mainTransition: .3s;
+}
+
+body {
+    font-family: 'Libre Franklin', sans-serif;
+    font-size: 20px;
+    background-color: var(--whiteColor);
+    line-height: 1.6;
+}
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Small */
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+
+/* Medium */
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+
+/* Large */
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+
+main .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container .box {
+    text-align: center;
+}
+
+.container .box .logo {
+    margin: 85px auto 30px;
+    width: 86px;
+    height: 26px;
+}
+
+.container .box h1 {
+    margin: 0;
+    color: var(--grayColor);
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.container .box h1 span {
+    color: var(--veryDarkBlue);
+    font-weight: 700;
+}
+
+.container .box p {
+    font-size: 18px;
+    margin: 25px 0 40px;
+}
+
+.box form {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 100px;
+}
+
+.box form input[type="email"] {
+    padding: 20px 30px;
+    border-radius: 40px;
+    border: 1px solid var(--grayColor);
+    font-size: 16px;
+    width: 420px;
+}
+
+.box form input[type="email"]:focus {
+    outline: none;
+}
+
+.box form input[type="email"]::placeholder {
+    font-size: 16px;
+}
+
+.box form input[type="email"]:focus::placeholder {
+    opacity: 0;
+}
+
+.box form input[type="submit"] {
+    border-radius: 40px;
+    color: var(--whiteColor);
+    background-color: var(--blueColor);
+    border: none;
+    outline: none;
+    padding: 20px 40px;
+    height: 62px;
+    font-weight: 600;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 4px 5px 0px var(--paleBlue);
+    transition: var(--mainTransition);
+}
+
+.box form input[type="submit"]:hover {
+    opacity: .9;
+    transform: translateY(-5px);
+}
+
+.error-msg {
+    display: none;
+    color: var(--lightRed);
+    font-size: 14px;
+    font-style: italic;
+    font-weight: 600;
+    text-align: left;
+    margin: 5px 0 0 30px;
+}
+
+form.error input[type="email"] {
+    border-color: var(--lightRed);
+}
+
+form.error .error-msg {
+    display: block;
+}
+
+.container .box .illustration {
+    width: 641px;
+    max-width: 100%;
+    box-shadow: 0 4px 5px 0px rgb(0 0 0 / 15%), 0px -2px 5px 1px rgb(0 0 0 / 15%);
+}
+
+.box .social-media {
+    display: flex;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.box .social-media li {
+    margin-right: 15px;
+}
+
+.box .social-media li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--blueColor);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid var(--grayColor);
+    padding: 8px 11px;
+    transition: var(--mainTransition);
+}
+
+.box .social-media li a:hover {
+    background-color: var(--blueColor);
+    color: var(--whiteColor);
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--grayColor);
+    font-size: 14px;
+    margin: 30px 0;
+}
+
+@media (max-width: 767px) {
+    .box form {
+        flex-direction: column;
+    }
+
+    .box form input[type="email"] {
+        width: 100%;
+    }
+
+    .error-msg {
+        text-align: center;
+    }
+}
